fix paragraph spacing

--- a/src/pages/SuccessPage/SuccessPage.scss
+++ b/src/pages/SuccessPage/SuccessPage.scss
@@ -45,7 +45,7 @@
 
     @include desktop {
       max-width: 1020px;
-      padding: 0;
+      padding: 1rem 0;
       margin: 0 auto;
     }
   }
